@@ -1,3 +1,4 @@
+% Generated by roxygen2 (4.0.2): do not edit by hand
 \name{contingencyTableBF}
 \alias{contingencyTableBF}
 \title{Function for Bayesian analysis of one- and two-sample designs}
@@ -7,40 +8,35 @@ contingencyTableBF(x, sampleType, fixedMargin = NULL,
   as.integer(0), ...)
 }
 \arguments{
-  \item{x}{an m by n matrix of counts (integers m,n > 1)}
+\item{x}{an m by n matrix of counts (integers m,n > 1)}
 
 \item{sampleType}{the sampling plan (see details)}
 
 \item{fixedMargin}{for the independent multinomial sampling plan, which margin is fixed ("rows" or "cols")}
 
-  \item{sampleType}{the sampling plan (see details)}
+\item{priorConcentration}{prior concentration parameter (see details)}
 
-  \item{priorConcentration}{prior concentration parameter
-  (see details)}
+\item{posterior}{if \code{TRUE}, return samples from the posterior instead
+of Bayes factor}
 
 \item{callback}{callback function for third-party interfaces}
-  
 
-  \item{...}{further arguments to be passed to or from
-  methods.}
+\item{...}{further arguments to be passed to or from methods.}
 }
 \value{
 If \code{posterior} is \code{FALSE}, an object of class
-\code{BFBayesFactor} containing the computed model
-comparisons is returned.
+  \code{BFBayesFactor} containing the computed model comparisons is
+  returned.
 
-If \code{posterior} is \code{TRUE}, an object of class
-\code{BFmcmc}, containing MCMC samples from the posterior
-is returned.
+  If \code{posterior} is \code{TRUE}, an object of class \code{BFmcmc},
+  containing MCMC samples from the posterior is returned.
 }
 \description{
-This function computes Bayes factors for contingency
-tables.
+This function computes Bayes factors for contingency tables.
 }
 \details{
-The Bayes factor provided by \code{contingencyTableBF}
-tests the independence assumption in contingency tables
-under various sampling plans.
+The Bayes factor provided by \code{contingencyTableBF} tests the independence assumption in
+contingency tables under various sampling plans.
 }
 \note{
 This will be implemented in a future version.
@@ -60,8 +56,8 @@ Richard D. Morey (\email{richarddmorey@gmail.com})
 Tahira Jamil (\email{tahjamil@gmail.com})
 }
 \references{
-Gunel, E. and Dickey, J., (1974) Bayes Factors for
-Independence in Contingency Tables. Biometrika, 61, 545-557
+Gunel, E. and Dickey, J., (1974)
+Bayes Factors for Independence in Contingency Tables. Biometrika, 61, 545-557
 }
 \keyword{htest}
 \keyword{internal}
